[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bejw"
version = "0.3.1"
description = "A capped reading list for links that shimmer"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "menisadi" }]
dependencies = [
    "rich>=14.3.2",
    "typer>=0.21.1",
]
keywords = ["cli", "reading-list", "links", "productivity"]

[project.urls]
Homepage = "https://github.com/menisadi/bejw"
Repository = "https://github.com/menisadi/bejw"
Changelog = "https://github.com/menisadi/bejw/blob/main/CHANGELOG.md"

[project.scripts]
bejw = "bejw.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
